# projekt_jezik

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp  shell.nix
example/: .gitignore  ForTest.in  ForTest.in.initial.ll  ForTest.in.optimized.ll  ForTest.in.syn  add.in  add.in.ast  arrayDecl.in  arrayDecl.in.ast  arrayIbuiltin.in  arrayIbuiltin.in.initial.ll  arrayIbuiltin.in.optimized.ll  arrayIbuiltin.in.syn  elseTest.in  elseTest.initial.ll  elseTest.optimized.ll  elseTest.syn  factorial.in  factorial.in.initial.ll  factorial.in.optimized.ll  factorial.in.syn  floatSort.in  floatSort.initial.ll  floatSort.optimized.ll  floatSort.syn  floatTest.in  floatTest.in.initial.ll  floatTest.in.optimized.ll  floatTest.in.syn  floatTestComparisons.in  floatTestComparisons.in.initial.ll  floatTestComparisons.in.optimized.ll  floatTestComparisons.in.syn  operatorTest.in  operatorTest.in.initial.ll  operatorTest.in.optimized.ll  operatorTest.in.syn  shortCircuitTest.in  shortCircuitTest.in.initial.ll  shortCircuitTest.in.optimized.ll  (+16 more)
src/: Builtins.h  Codegen.cpp  Codegen.h  Exp.h  FuncDef.h  Nodes.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Program.h  Scanner.h  Scope.h  Stmt.h  Token.cpp  Token.h  TokenStream.h  Type.cpp  Type.h  Typechecker.cpp  Typechecker.h  VarDecl.h  Visitor.h
